syntax = "proto3";
option java_outer_classname = "FeatureDTO";

message Value {
  oneof val {
    bytes bytes_val = 1;
    string string_val = 2;
    int32 int32_val = 3;
    int64 int64_val = 4;
    double double_val = 5;
    float float_val = 6;
    bool bool_val = 7;
    int64 unix_timestamp_val = 8;
    BytesList bytes_list_val = 9;
    StringList string_list_val = 10;
    Int32List int32_list_val = 11;
    Int64List int64_list_val = 12;
    DoubleList double_list_val = 13;
    FloatList float_list_val = 14;
    BoolList bool_list_val = 15;
    Int64List unix_timestamp_list_val = 16;
    MAP_STRING_STRING map_string_string_val = 17;
    MAP_STRING_FLOAT map_string_float_val = 18;
    SeqList seq_list_val = 19;
  }
}

//输入redis值
message FieldValue {
  Value value = 1;
  ValueType valueType = 2;
  enum ValueType{
    DEFAULT = 0;
    BYTES = 1;
    STRING = 2;
    INT32 = 3;
    INT64 = 4;
    DOUBLE = 5;
    FLOAT = 6;
    BOOL = 7;
    UNIX_TIMESTAMP = 8;
    BYTES_LIST = 9;
    STRING_LIST = 10;
    INT32_LIST = 11;
    INT64_LIST = 12;
    DOUBLE_LIST = 13;
    FLOAT_LIST = 14;
    BOOL_LIST = 15;
    UNIX_TIMESTAMP_LIST = 16;
    MAP_STRING_STRING = 17;
    MAP_STRING_FLOAT = 18;
    SeqList = 19;
  }
}
message BYTES{
  bytes val = 1;
}
message STRING{
  string val = 1;
}
message INT32{
  int32 val = 1;
}
message INT64{
  int64 val = 1;
}
message DOUBLE{
  double val = 1 ;
}
message FLOAT{
  float val = 1;
}
message BOOL{
  bool val = 1;
}
message UNIX_TIMESTAMP{
  int64 val = 8;
}

message BytesList {
  repeated bytes val = 1;
}

message StringList {
  repeated string val = 1;
}

message Int32List {
  repeated int32 val = 1;
}

message Int64List {
  repeated int64 val = 1;
}

message DoubleList {
  repeated double val = 1;
}

message FloatList {
  repeated float val = 1;
}

message BoolList {
  repeated bool val = 1;
}

message SeqList{
  repeated string val = 1;
}

message MAP_STRING_STRING {
  map<string, string> val = 1;
}

message MAP_STRING_FLOAT {
  map<string, float> val = 1;
}
